Added information about OpenAI API errors

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e283b8b-86aa-410b-a4b1-38c92c09c6c8",
+   "id": "290928ee-7a99-4109-b8cb-6b0540040d33",
    "metadata": {},
    "source": [
     "# Import libraries"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c7ba1dda-bfd2-40f4-b68a-1d205fea0ac8",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9963233f-6c68-4436-92e8-3e635dcd4223",
+   "id": "185fbabf-a0d8-4b31-a965-0e078d44d8e9",
    "metadata": {},
    "source": [
     "# Add API Key and create client variable"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "657a1071-b6a5-4518-bbfe-f540b9f98573",
+   "id": "41a03ee1-25b3-4d3d-a2d3-acf5c3259846",
    "metadata": {},
    "source": [
     "### Get sample responses to check whether it works ok"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e500375d-00c2-4163-b3c1-bf51efc400dd",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "7a758483-ae6a-4fc5-8931-79658b480c58",
    "metadata": {},
    "outputs": [
@@ -93,10 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletion(id='chatcmpl-8z6ny43Fbmo5qJC2PB1a40eTwZUm8', choices=[Choice(finish_reason='length', index=0, logprobs=None, message=ChatCompletionMessage(content=', in a small village nestled between rolling hills and lush forests, there lived a young girl named Alice. Alice was known for her adventurous spirit and her love for exploring the world around her.\\n\\nOne day, as she was wandering through the forest, Alice', role='assistant', function_call=None, tool_calls=None))], created=1709574858, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_2b778c6b35', usage=CompletionUsage(completion_tokens=50, prompt_tokens=11, total_tokens=61))\n",
-      ", in a small village nestled between rolling hills and lush forests, there lived a young girl named Alice. Alice was known for her adventurous spirit and her love for exploring the world around her.\n",
-      "\n",
-      "One day, as she was wandering through the forest, Alice\n"
+      "ChatCompletion(id='chatcmpl-8zoaTPOzHeTJplAL053LU9AzRezWO', choices=[Choice(finish_reason='length', index=0, logprobs=None, message=ChatCompletionMessage(content=', in a small village nestled among the mountains, there lived a young girl named Lily. Lily was known throughout the village for her kind heart and adventurous spirit. She spent her days exploring the forests and meadows that surrounded her home, always on the', role='assistant', function_call=None, tool_calls=None))], created=1709743157, model='gpt-3.5-turbo-0125', object='chat.completion', system_fingerprint='fp_b9d4cef803', usage=CompletionUsage(completion_tokens=50, prompt_tokens=11, total_tokens=61))\n",
+      ", in a small village nestled among the mountains, there lived a young girl named Lily. Lily was known throughout the village for her kind heart and adventurous spirit. She spent her days exploring the forests and meadows that surrounded her home, always on the\n"
      ]
     }
    ],
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "99b355eb-1df2-4ab8-adea-bbeac19be7bd",
    "metadata": {},
    "outputs": [],
@@ -117,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "3e4f4d85-c106-4f13-81f7-95bffd3c53d4",
    "metadata": {},
    "outputs": [],
@@ -136,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "a0d4c637-0b88-4063-97f3-ea59488000c0",
    "metadata": {},
    "outputs": [
@@ -145,8 +143,8 @@
      "output_type": "stream",
      "text": [
       "Model: gpt-3.5-turbo-0125\n",
-      "Created: 1709575384\n",
-      "ID: chatcmpl-8z6wSi8fjfcEADXwGsMRZ5EPYBIvX\n"
+      "Created: 1709743210\n",
+      "ID: chatcmpl-8zobK0R78HVj9gGUBEAClzkPRv2ID\n"
      ]
     }
    ],
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "0cd5026a-e398-415a-a60d-8ca8dee39387",
    "metadata": {},
    "outputs": [
@@ -166,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm an AI assistant and do not have the specific information for any particular zoo. Typically, the opening hours for zoos can vary depending on the season and day of the week. It's best to check the official website or contact the zoo directly\n"
+      "I apologize for the inconvenience, but as a language model AI, I do not have real-time information. I recommend checking the zoo's official website or contacting them directly to inquire about their opening hours.\n"
      ]
     }
    ],
@@ -176,10 +174,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56004602-0ca9-48b7-a7b3-efe38ba890e6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "id": "971b2f3d-787f-4e1d-b8eb-478fa695b282",
+   "metadata": {},
    "source": [
     "# Roles\n",
     "There are three important roles.\n",
@@ -190,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "eaa250b1-e2bd-492b-aa27-6230f45a2d59",
    "metadata": {},
    "outputs": [],
@@ -213,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "af73460d-f893-486d-936e-eb6ff3b5fd5f",
    "metadata": {},
    "outputs": [],
@@ -226,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "a115e77d-6fee-4f1a-b540-2f5513b23a84",
    "metadata": {},
    "outputs": [
@@ -234,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¡Hola! El último ganador de la Copa del Mundo en Brasil fue Alemania en 2014. ¿Hay algo más en lo que pueda ayudarte?\n"
+      "¡Hola! El último Mundial de la FIFA se celebró en Brasil en 2014 y fue ganado por Alemania. ¿Hay algo más en lo que pueda ayudarte?\n"
      ]
     }
    ],
@@ -245,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cba5916-9c31-4705-bb0c-3d625f698ea4",
+   "id": "90b99b36-f042-4e15-8149-10fd46e571e1",
    "metadata": {},
    "source": [
     "# Configure assistant for Coca Cola Museum"
@@ -253,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "4cd750c6-3abe-4b42-a1dd-e7244c7067af",
    "metadata": {},
    "outputs": [],
@@ -273,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "23bfb6af-4e60-4f6c-9e17-43b5cb03b4b0",
    "metadata": {},
    "outputs": [],
@@ -286,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "0cc6a9f9-ed8f-486a-8fdf-f44cbc7495a1",
    "metadata": {},
    "outputs": [
@@ -294,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One notebook in the souvenir store is $10. The Coca Cola museum is not open at 5am on Sundays. The museum opens at 9am and closes at 7pm on Sundays.\n"
+      "Hello! A Coca Cola notebook in the souvenir store typically costs $10. You can visit the museum on Sundays, but please note that the museum opens at 9am. Unfortunately, you won't be able to visit at 5am on Sundays as the museum will still be closed at that time. The opening hours on Sundays are usually from 9am to 5pm. If you have any more questions or need further information, feel free to ask!\n"
      ]
     }
    ],
@@ -304,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ef9aa03-911b-493a-b19a-796cb69c5e9e",
+   "id": "0c9bf1a1-478d-413e-908f-7f8d0fc4f5c7",
    "metadata": {},
    "source": [
     "### Create context for a fluent conversation"
@@ -312,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "824693b1-8a2b-43f9-9288-39716a6d3a6e",
    "metadata": {},
    "outputs": [],
@@ -327,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "f4083046-3c5a-415a-b8d3-1ad56f562983",
    "metadata": {},
    "outputs": [],
@@ -342,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "4fe2cce8-3604-40a1-9ef7-034624bd5974",
    "metadata": {},
    "outputs": [],
@@ -355,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "16cf3c0e-a411-4fc1-882b-4278ef8cf4f6",
    "metadata": {},
    "outputs": [
@@ -363,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On Mondays, the Coca Cola museum is open from 9am to 5pm. You can visit the museum during these hours on Mondays.\n"
+      "The Coca Cola museum is typically open from Monday to Saturday from 9am to 5pm. So, yes, you can visit the museum on a Monday during those hours. If you have any other questions or need more information, please don't hesitate to ask!\n"
      ]
     }
    ],
@@ -373,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef958cb2-27ff-4c23-a566-4fd1bba2dc70",
+   "id": "7b6c3330-97fc-41ac-a04c-43dec0d654af",
    "metadata": {},
    "source": [
     "### Experiment with temperature\n",
@@ -382,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "id": "a1fbe0c6-ec7e-494d-b991-6d451ec943ff",
    "metadata": {},
    "outputs": [],
@@ -406,16 +402,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "0b427224-cdb0-4c18-9735-2923dd69108f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High temperature: On Mondays, the Coca Cola museum is open from 10am to 6pm. Each day may have different opening and closing hours, so it's always best to check the specific information for the day you plan to visit.\n",
-      "Low temperature: On Mondays, the Coca Cola museum is open from 9am to 5pm. You can visit the museum during these hours.\n"
+      "High temperature: On Mondays, the Coca Cola museum is usually open from 9am to 5pm, with the last entry at 4pm. This schedule could be subject to change on holidays or special occasions, so it's always a good idea to confirm the hours beforehand. If you have any more questions or if there's anything else you'd like to know, feel free to ask!\n",
+      "Low temperature: On Mondays, the Coca Cola museum is typically open from 9am to 5pm as well. So, you can plan your visit between those hours on a Monday. If you have any other questions or need more details, feel free to ask!\n"
      ]
     }
    ],
@@ -425,9 +423,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e85520a2-f1a7-40a6-af09-8c44a696efc0",
+   "metadata": {},
+   "source": [
+    "### Checking and printing errors, like model's max_tokens exceeded\n",
+    "More errors can be found in https://help.openai.com/en/articles/6897213-openai-library-error-types-guidance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ad656bd1-3eb6-48d0-ac77-52f9f9bc9176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages.append(\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": \"Tell me everything you know about Coca Cola with a lot of detail.\"\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "09464cdc-ee8e-4057-90cd-8f6169bf678c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got an error from OpenAI API: Error code: 400 - {'error': {'message': 'max_tokens is too large: 5000. This model supports at most 4096 completion tokens, whereas you provided 5000.', 'type': 'invalid_request_error', 'param': 'max_tokens', 'code': None}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    response = client.chat.completions.create(\n",
+    "        messages=messages,\n",
+    "        model=\"gpt-3.5-turbo\",\n",
+    "        temperature=0.6,\n",
+    "        max_tokens=5000\n",
+    "    )\n",
+    "    print(response.choices[0].message.content)\n",
+    "except Exception as e:\n",
+    "    print(f'Got an error from OpenAI API: {e}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5b2a7be7-d0f8-4ad4-90d4-208503c60284",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coca-Cola is one of the most iconic and recognizable brands in the world, known for its signature red and white logo and refreshing beverages. Here are some key details about Coca-Cola:\n",
+      "\n",
+      "1. **History**: Coca-Cola was invented in 1886 by pharmacist John Stith Pemberton in Atlanta, Georgia. The drink was originally intended as a patent medicine, claiming to cure various ailments. However, it soon became popular as a refreshing soda beverage.\n",
+      "\n",
+      "2. **Products**: Coca-Cola offers a wide range of beverages, including the classic Coca-Cola soda, Diet Coke, Coca-Cola Zero Sugar, Sprite, Fanta, and many more. The company also produces various non-carbonated drinks like juices, teas, and bottled water.\n",
+      "\n",
+      "3. **Global Reach**: Coca-Cola is sold in over 200 countries worldwide, making it one of the most widely distributed products in the world. The brand's marketing campaigns and iconic logo have contributed to its global recognition.\n",
+      "\n",
+      "4. **Sustainability**: Coca-Cola is committed to sustainability and environmental responsibility. The company has set ambitious goals to reduce its carbon footprint, promote recycling, and conserve water resources.\n",
+      "\n",
+      "5. **Coca-Cola Museum**: The Coca-Cola Museum, located in Atlanta, Georgia, offers visitors a journey through the history of the\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    response = client.chat.completions.create(\n",
+    "        messages=messages,\n",
+    "        model=\"gpt-3.5-turbo\",\n",
+    "        temperature=0.6,\n",
+    "        max_tokens=256\n",
+    "    )\n",
+    "    print(response.choices[0].message.content)\n",
+    "except Exception as e:\n",
+    "    print(f'Got an error from OpenAI API: {e}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac902de3-9c41-4e33-aeec-d2667b5d5db9",
+   "id": "df0301e0-9e9c-454d-92eb-edd633bd65f3",
    "metadata": {},
    "outputs": [],
    "source": []
